--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "dev": "nodemon index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@ndiinginc/fetch": "^3.0.6",
         "express": "^4.21.1"
     }
 }
